fixat annamarias grejer

--- a/_posts/2017-01-06-hyra-bil.markdown
+++ b/_posts/2017-01-06-hyra-bil.markdown
@@ -5,6 +5,6 @@ date:   2017-01-06 18:31:13
 categories: resa
 tags: wedding
 ---
-Vill man stanna några dagar och utforska Gotland eller hellre ta bil ner till Stelor så rekommenderar vi [Wisby Biluthyrning](http://www.wisby.se/biluthyrning.pab). Bilarna är av lite äldre, svensk modell men med bra funktion. Vi tycker det är ganska skönt att uppleva tex. en gammal, skön SAAB 9-5 när man har lite semester. Ni kan hämta upp bilen direkt på flygplatsen och de kan även förmontera barnstol.
+Vill man stanna några dagar och utforska Gotland eller vill ta bil ner till Stelor så rekommenderar vi [Wisby Biluthyrning](http://www.wisby.se/biluthyrning.pab). Bilarna är av lite äldre modell men med bra funktion. Vi tycker det är ganska skönt att uppleva tex. en gammal, skön SAAB 9-5 när man har lite semester. Ni kan hämta upp bilen direkt på flygplatsen och de kan även förmontera barnstol.
 
 Alternativt finns också [Hertz](https://www.hertz.se/rentacar/hyrbil/gotland?LinkType=HZSE), [Avis](https://www.avis.com/en/locations/se/visby) och de vanliga företagen som också levererar direkt på flygplatsen. Modernare bilar men också lite dyrare. [Svedavia har mer info om hyrbilar](https://www.swedavia.se/visby/till-fran/hyrbil/#gref) från Visby flygplats.
