--- a/_posts/2017-01-07-stelor.markdown
+++ b/_posts/2017-01-07-stelor.markdown
@@ -5,4 +5,4 @@ date:   2017-01-07 18:31:13
 categories: boende
 tags: wedding
 ---
-[Hotel Stelor](http://www.stelor.se) ligger [alldeles norr om](https://goo.gl/maps/kBJ2iUybynM2) den lilla byn Västergarn intill [Visby Golfklubb](http://www.visbygk.com). Vi har kommit hit flera gånger och alltid haft verkligt fina besök. På stranden en bit från hotellet förlovade vi oss 2013. Vi tycker det är lika bra att även gifta oss här. :)
+[Hotel Stelor](http://www.stelor.se) ligger [alldeles norr om](https://goo.gl/maps/kBJ2iUybynM2) den lilla byn Västergarn intill [Visby Golfklubb](http://www.visbygk.com). Vi har bott här flera gånger och alltid haft riktigt fina besök. På stranden en bit från hotellet förlovade vi oss 2013. Vi tycker det är lika bra att även gifta oss här. :)
