--- a/_posts/2017-01-06-boende.markdown
+++ b/_posts/2017-01-06-boende.markdown
@@ -13,6 +13,10 @@ På samma avstånd finns också [Kronholmens Gård](http://www.kronholmensgard.s
 
 Lite längre söderut, men fortfarande nästan på gångavstånd (1km) från Stelor, finns [Strandvägens Pensionat](http://www.strandvagenspensionat.se) som har stugor med 2 till 10 bäddar.
 
+Bokar ni på Ljungs Fem Rum, Kronholmens Gård eller på Strandvägens Pensionat så uppge att ni är gäster till Robert och Annamarias bröllop. Vi har nämligen bett dem att hålla några rum fram till 17 Februari.
+
 Söderut från Västergarn finns också fina [Djupvik](http://www.djupvikhotel.com) med moderna bungalows med havsutsikt och pool. Med bil tar det ca 20 minuter från Djupvik till Hotel Stelor.
 
 I Visby finns förstås [många olika alternativ](http://www.destinationgotland.se/sv/boende) men då behöver man bil eller får ta taxi. Det tar ca 25 minuter med bil till Hotel Stelor. Gotlands officiella sida har också många alternativ för hur man kan bo.
+
+Ett annat spännande alternativ är att se [vad som finns på AirBnB](https://www.airbnb.se/s/Gotland--Sverige?page=1&s_tag=D0rtRaQ-&allow_override%5B%5D=). Ofta kan man hitta både bra och roliga boenden till fina priser.
