--- a/_posts/2017-01-08-osa.markdown
+++ b/_posts/2017-01-08-osa.markdown
@@ -7,4 +7,4 @@ tags: wedding
 ---
 För att vi skall kunna planera behöver vi veta hur många ni är som kommer. Vi vill förstås också veta om ni har några speciella allergier eller matrestriktioner. Maila [Robert](mailto:robert.feldt@gmail.com) eller [Annamaria](mailto:annamaria.sundbye@gmail.com) och anmäl er och berätta om det är något speciellt vi eller restaurangen skall tänka på. Senast 17:e februari, tack.
 
-Meddela också om ni planerar att vara med på brunch på söndagen efter bröllopsfesten.
+På söndagen är ni välkomna att äta frukost tillsammans med oss som bor på Hotel Stelor. Öppet hus mellan 9-11. Meddela därför oss om ni planerar att vara med på frukosten; hotellet vill veta hur många vi blir senast 10 Juni.
