--- a/_posts/2017-01-05-schema.markdown
+++ b/_posts/2017-01-05-schema.markdown
@@ -7,4 +7,4 @@ tags: wedding
 ---
 Vigselceremoni kommer hållas på Hotel Stelor kl. 15:00 den 17 Juni 2017. Därefter serveras bubbel och lite enklare tilltugg i trädgården. Klockan 17:00 börjar festen i Restaurangen på Hotel Stelor. Det är väldigt korta avstånd och man går runt på området. Om ni inte bor på hotellet utan kommer med bil så finns det en parkering direkt på gårdsplanen när man kör in från landsvägen.
 
-Dagen efter är de som vill välkomna att äta frukost på hotel Stelor. Vänligen meddela om ni planerar vara med på detta när ni anmäler er.
+Dagen efter är de som vill välkomna att äta frukost på hotel Stelor. Vänligen meddela om ni planerar vara med på detta.
